# AVCode

./: README.md
XiaCaoJun_Teacher/XPlay/app/src/main/cpp/: CMakeLists.txt  FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  FFPlayerBuilder.cpp  FFPlayerBuilder.h  FFResample.cpp  FFResample.h  GLVideoView.cpp  GLVideoView.h  IAudioPlay.cpp  IAudioPlay.h  IDecode.cpp  IDecode.h  IDemux.cpp  IDemux.h  IObserver.cpp  IObserver.h  IPlayer.cpp  IPlayer.h  IPlayerBuilder.cpp  IPlayerBuilder.h  IPlayerProxy.cpp  IPlayerProxy.h  IResample.cpp  IResample.h  IVideoView.cpp  IVideoView.h  SLAudioPlay.cpp  SLAudioPlay.h  XData.cpp  XData.h  XEGL.cpp  XEGL.h  XLog.h  XParameter.h  XShader.cpp  XShader.h  XTexture.cpp  (+4 more)
XiaCaoJun_Teacher/testFFmpeg/app/: build.gradle
XiaCaoJun_Teacher/testFFmpeg/gradle/wrapper/: gradle-wrapper.properties
XiaCaoJun_Teacher/testOpenSL/gradle/wrapper/: gradle-wrapper.properties
XiaCaoJun_Teacher/winPro/include/opencv2/: cvconfig.h
XiaCaoJun_Teacher/winPro/lib/win64/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  opencv_world331d.lib  postproc.lib  swresample.lib  swscale.lib
XiaCaoJun_Teacher/winPro/src/Audio_Video_Rtmp_Class/: Audio_Video_Rtmp_Class.sln  Audio_Video_Rtmp_Class.vcxproj  Audio_Video_Rtmp_Class.vcxproj.filters  XAudioRecord.cpp  XAudioRecord.h  XBilateralFilter.cpp  XController.h  XDataThread.cpp  XDataThread.h  XFilter.h  XRtmp.cpp  XVideoCapture.cpp  XVideoCapture.h  main.cpp
XiaCaoJun_Teacher/winPro/src/BilateralFilter/: BilateralFilter.sln  BilateralFilter.vcxproj  main.cpp
XiaCaoJun_Teacher/winPro/src/Qt_Audio_Rtmp/: Qt_Audio_Rtmp.sln  Qt_Audio_Rtmp.vcxproj  main.cpp
XiaCaoJun_Teacher/winPro/src/Qt_Audio_Rtmp_Class/: Qt_Audio_Rtmp_Class.sln  Qt_Audio_Rtmp_Class.vcxproj  Qt_Audio_Rtmp_Class.vcxproj.filters  XAudioRecord.cpp  XAudioRecord.h  XMediaEncode.cpp  XMediaEncode.h  XRtmp.cpp  XRtmp.h  main.cpp
XiaCaoJun_Teacher/winPro/src/SDL_RGB/: SDL_RGB.sln  SDL_RGB.vcxproj  main.cpp
XiaCaoJun_Teacher/winPro/src/TestFFmpeg/: TestFFmpeg.sln  TestFFmpeg.vcxproj  main.cpp
XiaCaoJun_Teacher/winPro/src/TestOpenCVMat/: TestOpenCVMat.sln  TestOpenCVMat.vcxproj  main.cpp
XiaCaoJun_Teacher/winPro/src/TestOpenCVViewCam/: TestOpenCVViewCam.sln  TestOpenCVViewCam.vcxproj  main.cpp
XiaCaoJun_Teacher/winPro/src/XRtmpStreamer/: XBilateralFilter.h  XController.cpp  XData.cpp  XData.h  XFilter.cpp  XMediaEncode.cpp  XMediaEncode.h  XRtmp.h  XRtmpStreamer.sln  XRtmpStreamer.vcxproj  XRtmpStreamer.vcxproj.filters  xrtmpstreamer.cpp  xrtmpstreamer.h  xrtmpstreamer.ui
XiaCaoJun_Teacher/winPro/src/file_to_rtmp/: file_to_rtmp.sln  file_to_rtmp.vcxproj  main.cpp
XiaCaoJun_Teacher/winPro/src/first_ffmpeg/: first_ffmpeg.sln  first_ffmpeg.vcxproj  main.cpp
XiaCaoJun_Teacher/winPro/src/opencv_rtsp_to_rtmp/: main.cpp  opencv_rtsp_to_rtmp.sln  opencv_rtsp_to_rtmp.vcxproj
XiaCaoJun_Teacher/winPro/src/opencv_rtsp_to_rtmp_class/: XMediaEncode.cpp  XMediaEncode.h  XRtmp.cpp  XRtmp.h  main.cpp  opencv_rtsp_to_rtmp_class.sln  opencv_rtsp_to_rtmp_class.vcxproj  opencv_rtsp_to_rtmp_class.vcxproj.filters
XiaCaoJun_Teacher/winPro/src/rtsp_to_rtmp/: rtsp_to_rtmp.sln  rtsp_to_rtmp.vcxproj
XiaCaoJun_Teacher/winPro/src/sdl_qt_rgb/: main.cpp  sdl_qt_rgb.sln  sdl_qt_rgb.vcxproj  sdl_qt_rgb.vcxproj.filters  sdlqtrgb.cpp  sdlqtrgb.h  sdlqtrgb.qrc  sdlqtrgb.ui
XiaCaoJun_Teacher/winPro/src/test_rgb_qt/: main.cpp  test_rgb_qt.sln  test_rgb_qt.vcxproj  test_rgb_qt.vcxproj.filters  testrgb.cpp  testrgb.h  testrgb.qrc  testrgb.ui
YangWanli_Teacher/AndroidOpenSLAudio/: build.gradle
YangWanli_Teacher/AndroidOpenSLAudio/app/: build.gradle
YangWanli_Teacher/JniThread/: build.gradle  settings.gradle
YangWanli_Teacher/JniThread/app/: build.gradle
YangWanli_Teacher/MyMusic/: build.gradle  settings.gradle
YangWanli_Teacher/MyMusic/app/: build.gradle
YangWanli_Teacher/MyMusic/myplayer/: build.gradle
YangWanli_Teacher/MyMusic/myplayer/src/main/cpp/: CMakeLists.txt  CallJava.cpp  CallJava.h  WLAudio.cpp  WLAudio.h  WLBufferQueue.cpp  WLBufferQueue.h  WLFFmpeg.cpp  WLFFmpeg.h  WLPcmBean.cpp  WLPcmBean.h  WLPlayStatus.cpp  WLPlayStatus.h  WLQueue.cpp  WLQueue.h  WLVideo.cpp  WLVideo.h  call_java.cpp  call_java.h  h264_sps_parser.h  hevc_sps_parser.h  native-lib.cpp  native_lib.cpp  wl_audio.cpp  wl_audio.h  wl_buffer_queue.cpp  wl_buffer_queue.h  wl_ffmpeg.cpp  wl_ffmpeg.h  wl_frame_queue.cpp  wl_frame_queue.h  wl_link_order_queue.cpp  wl_link_order_queue.h  wl_packet_queue.cpp  wl_packet_queue.h  wl_pcm_bean.cpp  wl_pcm_bean.h  wl_play_status.cpp  wl_play_status.h  wl_queue.cpp  (+3 more)
YangWanli_Teacher/MyMusic/myplayer/src/main/cpp/log/: androidLog.h  android_log.h
YangWanli_Teacher/OpenGLC++/NativeOpenGLDemo/: build.gradle  settings.gradle
YangWanli_Teacher/OpenGLC++/NativeOpenGLDemo/app/src/main/cpp/: CMakeLists.txt  call_java.cpp  call_java.h  native-lib.cpp
YangWanli_Teacher/OpenGLC++/NativeOpenGLDemo/app/src/main/cpp/egl/: EglHelper.cpp  EglHelper.h  EglThread.cpp  EglThread.h  egl_helper.cpp  egl_helper.h  egl_thread.cpp  egl_thread.h
YangWanli_Teacher/OpenGLC++/NativeOpenGLDemo/app/src/main/cpp/log/: androidLog.h  android_log.h
YangWanli_Teacher/OpenGLC++/NativeOpenGLDemo/app/src/main/cpp/matrix/: MatrixUtil.h  matrix_util.h
YangWanli_Teacher/OpenGLC++/NativeOpenGLDemo/app/src/main/cpp/opengl/: BaseOpengl.cpp  BaseOpengl.h  FilterOne.cpp  FilterOne.h  FilterTwo.cpp  FilterTwo.h  FilterYUV.cpp  FilterYUV.h  Opengl.cpp  Opengl.h  base_opengl.cpp  base_opengl.h  filter_one.cpp  filter_one.h  filter_two.cpp  filter_two.h  filter_yuv.cpp  filter_yuv.h
YangWanli_Teacher/OpenGLC++/NativeOpenGLDemo/app/src/main/cpp/shaderutil/: shaderUtil.h  shader_util.h
YangWanli_Teacher/OpenGLDemo/app/: build.gradle
YangWanli_Teacher/OpenSLESRecord/app/src/main/cpp/: CMakeLists.txt  RecordBuffer.cpp  RecordBuffer.h  native-lib.cpp  record_double_buffer.cpp  record_double_buffer.h  record_single_buffer.cpp  record_single_buffer.h
YangWanli_Teacher/OpenSLESRecord/app/src/main/cpp/log/: android_log.h
(+150 files in other folders)
